<resources>
    <string name="app_name">Сканер 4.19 </string>
    <string name="run_name">4.19 | 29-04-2025</string>
    <string name="action_settings">Настройки</string>
    <string name="action_item1">Штрих-код, цена, кол-во, № п/п</string>
    <string name="action_item2">Штрих-код, цена</string>
    <string name="action_item3">Штрих-код</string>
    <string name="action_item4">Просмотр данных</string>
    <string name="action_item5">Штрих-код, количество</string>
    <string name="action_item6">QRCode + Штрих-код, количество</string>

    //======== для работы с файлами
    <string name="btnAddPosition">Добавить позицию</string>
    <string name="title_activity_scaner">ScanerActivity</string>
    <string name="text_barcode">Штрих-код</string>
    <string name="text_price">Цена</string>
    <string name="text_quantity">Количество</string>
    <string name="text_number">Порядковый номер</string>

    <string name="btnUploadDelete">Выгрузить - Удалить</string>
    <string name="title_activity_electron_document">electron_document</string>
    <string name="title_activity_dbf">activity_dbf</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_select_control">SelectControl</string>
    <string name="title_activity_connect_mag">Настройка связи</string>

    //==========

</resources>
