<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="by.matveev.lenovostart.MainActivity">
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_item1"
        android:orderInCategory="100"
        android:title="@string/action_item1"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_item2"
        android:orderInCategory="100"
        android:title="@string/action_item2"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_item5"
        android:orderInCategory="100"
        android:title="@string/action_item5"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_item3"
        android:orderInCategory="100"
        android:title="@string/action_item3"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_item4"
        android:orderInCategory="100"
        android:title="@string/action_item4"
        app:showAsAction="never" />
</menu>
