<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".ScanerActivity"
    tools:showIn="@layout/activity_scaner">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="160dp"
        tools:layout_editor_absoluteY="0dp">

        <TextView
            android:id="@+id/textView11"
            android:layout_width="match_parent"
            android:layout_height="4dp" />

        <TextView
            android:id="@+id/txtvQRcode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="QRCode"
            android:textColor="#000000"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/txtsQRcode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="QRCode"
            android:inputType="text"
            android:textColor="#000000"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/txtvBarcode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_barcode"
            android:textColor="#000000"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/txtnBarcode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="13"
            android:hint="ШТРИХКОД"
            android:inputType="number"
            android:maxLength="13"
            android:maxLines="13"
            android:textColor="#000000"
            android:textSize="20sp"
            tools:ignore="SpeakableTextPresentCheck" />

        <TextView
            android:id="@+id/txtvPrice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_price"
            android:textColor="#000000"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/txtdPrice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="7"
            android:hint="ЦЕНА"
            android:inputType="numberDecimal"
            android:maxLength="7"

            android:textColor="#000000"
            android:textSize="20sp"
            tools:ignore="SpeakableTextPresentCheck" />

        <TextView
            android:id="@+id/txtvQuantity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_quantity"
            android:textColor="#000000"
            android:textSize="18sp"
            android:visibility="visible" />

        <EditText
            android:id="@+id/txtdQuantity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="7"
            android:hint="КОЛИЧЕСТВО"
            android:inputType="numberDecimal"
            android:maxLength="6"
            android:textColor="#000000"
            android:textSize="18sp"
            tools:ignore="SpeakableTextPresentCheck" />

        <TextView
            android:id="@+id/txtvNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:text="@string/text_number"
            android:textColor="#000000"
            android:textSize="18sp"
            tools:text="Порядковый номер" />

        <EditText
            android:id="@+id/txtnNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="3"
            android:hint="ПОРЯДКОВЫЙ НОМЕР"
            android:inputType="number"
            android:maxLength="3"
            android:textColor="#000000"
            android:textSize="18sp"
            tools:ignore="SpeakableTextPresentCheck" />

        <Button
            android:id="@+id/btnAddPosition"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:nextFocusUp="@+id/txtvBarcode"
            android:onClick="ok"
            android:text="Добавить позицию"

            android:textColor="#000000"
            android:textSize="20sp" />

        <Button
            android:id="@+id/btnSaveToServer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="ЗАГРУЗИТЬ НА СЕРВЕР"
            android:textColor="#000000"
            android:textSize="24sp" />

        <Button
            android:id="@+id/btnDeleteFile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="DeleteFile"
            android:text="УДАЛИТЬ ДАННЫЕ"
            android:textColor="#000000"
            android:textSize="24sp"
            android:textStyle="normal" />

        <Button
            android:id="@+id/btnEditDatTxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="РЕДАКТИРОВАНИЕ"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/txtLogScaner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="..."
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="24sp"
            android:textStyle="normal|bold" />


    </LinearLayout>

    </ScrollView>

</android.support.constraint.ConstraintLayout>